patch 0.1.22 fixed the bug with switchers and tooltip in modal; fixed all z-indexes;

--- a/src/ui/components/controls/popups/components/Dropdown/ui/Dropdown.module.scss
+++ b/src/ui/components/controls/popups/components/Dropdown/ui/Dropdown.module.scss
@@ -5,7 +5,8 @@
 .menu {
     background: var(--color-main);
     position: absolute;
-    z-index: var(--uikit-controls-menu-z-index);
+
+    // z-index: var(--uikit-controls-menu-z-index);
     border-radius: var(--uikit-border-radius-s);
     flex-direction: column;
     display: flex;
