--- a/src/ui/components/controls/popups/components/ListBox/ui/ListBox.module.scss
+++ b/src/ui/components/controls/popups/components/ListBox/ui/ListBox.module.scss
@@ -2,7 +2,8 @@
     min-width: 100%;
     background: var(--color-main);
     position: absolute;
-    z-index: var(--uikit-controls-menu-z-index);
+
+    // z-index: var(--uikit-controls-menu-z-index);
     border-radius: var(--uikit-border-radius-s);
     box-shadow: 2px 2px 8px var(--color-secondary);
 }
