--- a/src/ui/utils/ModalConfirm/ui/ModalConfirm.module.scss
+++ b/src/ui/utils/ModalConfirm/ui/ModalConfirm.module.scss
@@ -6,7 +6,7 @@
     left: 0;
     opacity: 0;
     pointer-events: none;
-    z-index: var(--uikit-utils-z-index);
+    z-index: -1;
     display: flex;
     justify-content: center;
     align-items: center;
